--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <a class="nav-link fw-bold color-gold" aria-current="page" href="#">تسجيـل</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link fw-bold color-gold" aria-current="page" href="#">تسجيـل دخول</a>
+                <a class="nav-link fw-bold color-gold" aria-current="page" href="login.html">تسجيـل دخول</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link fw-bold color-gold" aria-current="page" href="contact.html">اتصـل بنـــا</a>
